# re-collect

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/re_collect/: __init__.py  claims.py  memory.py  updater.py
src/re_collect/agents/: __init__.py  memory_agent.py  tools.py
src/re_collect/db/: __init__.py  converters.py  database.py
src/re_collect/db/models/: belief_edge.py  claim.py  confidence_history.py
src/re_collect/deduplication/: __init__.py  deduplicator.py  merger.py  similarity.py
src/re_collect/extractors/: __init__.py  base.py  llm.py
src/re_collect/graphs/: edges.py  graph.py
src/re_collect/llm/: __init__.py  base.py
src/re_collect/llm/providers/: __init__.py  anthropic.py  local.py  ollama.py  openai.py  openrouter.py
src/re_collect/policies/: __init__.py
src/re_collect/storage/: __init__.py  memory_store.py  sqlite.py
src/re_collect/storage/vector/: __init__.py  base.py  faiss.py  pinecone.py  qdrant.py
src/recollectx/: __init__.py  claims.py  memory.py  propagation.py  state.py  updater.py
src/recollectx/agents/: __init__.py  memory_agent.py  tools.py
src/recollectx/db/: converters.py  database.py
src/recollectx/db/models/: __init__.py  belief_edge.py  claim.py  confidence_history.py
src/recollectx/deduplication/: __init__.py  deduplicator.py  merger.py  similarity.py
src/recollectx/extractors/: __init__.py  base.py  llm.py
src/recollectx/graph/: __init__.py  explanation.py
src/recollectx/llm/: __init__.py  prompts.py
src/recollectx/llm/providers/: __init__.py  anthropic.py  local.py  ollama.py  openai.py  openrouter.py
src/recollectx/policies/: base.py  static.py
src/recollectx/storage/: memory_store.py
src/recollectx/storage/vector/: __init__.py  faiss.py  pinecone.py  qdrant.py
tests/: conftest.py  test_claims.py  test_deduplication.py  test_extractor.py  test_graph.py  test_integration.py  test_memory.py  test_memory_store.py  test_policies.py  test_propagation.py  test_updater.py
