[project]
name = "re-collect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Bihan Banerjee", email = "banerjeebihan456@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "sqlalchemy>=2.0.48",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.5",
]
