[project]
name = "re-collect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Bihan Banerjee", email = "banerjeebihan456@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "anthropic>=0.84.0",
    "faiss-cpu>=1.13.2",
    "numpy>=2.4.3",
    "openai>=2.28.0",
    "pinecone>=8.1.0",
    "qdrant-client>=1.17.1",
    "sentence-transformers>=5.3.0",
    "sqlalchemy>=2.0.48",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.5",
]
