[project]
name = "recollectx"
version = "0.2.6"
description = "Belief-centric memory layer for agentic AI systems"
readme = "README.md"
authors = [
    { name = "Bihan Banerjee", email = "banerjeebihan456@gmail.com" }
]
license = "MIT"
requires-python = ">=3.12"
keywords = [
    "memory", "ai", "agents", "beliefs", "episodic", "semantic",
    "llm", "langchain", "rag", "knowledge-graph"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "sqlalchemy>=2.0",
    "langchain>=1.2.10",
    "langchain-core>=1.2.17",
    "langchain-anthropic>=1.3.4",
    "langchain-openai>=1.1.10",
    "langchain-google-genai>=4.2.1",
    "langgraph>=1.0.10",
]

[project.urls]
Homepage = "https://github.com/BihanBanerjee/re-collect"
Repository = "https://github.com/BihanBanerjee/re-collect"
"Bug Tracker" = "https://github.com/BihanBanerjee/re-collect/issues"

[project.optional-dependencies]
dev = [
    "mypy>=1.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.1",
]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.25"]
ollama = ["aiohttp>=3.9"]
qdrant = ["qdrant-client>=1.7"]
pinecone = ["pinecone-client>=3.0"]
local = ["sentence-transformers>=2.2", "numpy>=1.24", "faiss-cpu>=1.7"]
llm = [
    "recollectx[openai]",
    "recollectx[anthropic]",
    "recollectx[ollama]",
]
vector = [
    "recollectx[qdrant]",
    "recollectx[pinecone]",
]
all = [
    "recollectx[llm]",
    "recollectx[vector]",
    "recollectx[local]",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = false
packages = ["recollectx"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "faiss", "faiss.*",
    "numpy", "numpy.*",
    "sentence_transformers", "sentence_transformers.*",
    "qdrant_client", "qdrant_client.*",
    "pinecone", "pinecone.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "N802"]

[tool.ruff.lint.isort]
known-first-party = ["re_collect"]
